[package]
name = "cocaine"
version = "0.2.0"
authors = ["Evgeny Safronov <division494@gmail.com>"]
description = "Cocaine Framework Rust"
keywords = ["Cocaine"]
license = "MIT"

[dependencies]
bitflags = "0.7"
log = "0.3"
rmp = { version = "0.8", path = "../rmp/rmp" }
rmp-serde = { version = "0.12", path = "../rmp/rmp-serde" }
rmpv = { version = "0.3", path = "../rmp/rmpv", features = ["with-serde"] }
serde = "0.9"
serde_derive = "0.9"
futures = "0.1"
nix = "*"
libc = "*"
tokio-core = "=0.1.4"
mio = "=0.6.4"

[dev-dependencies]
slog = "1.4"
slog-term = "1.3"
slog-stdlog = "1.1"
slog-envlogger = "0.5"
