[package]
name = "cocaine"
version = "0.5.0"
authors = ["Evgeny Safronov <division494@gmail.com>"]
description = "Cocaine Framework Rust"
keywords = ["Cocaine"]
license = "MIT"

[dependencies]
serde = "1"
serde_derive = "1"

futures = "0.1"
bitflags = "0.7"
log = "0.3"
libc = "0.2"
rmp = "0.8.5"
rmp-serde = "0.13.0"
rmpv = { version = "0.4", features = ["with-serde"] }
tokio-core = "0.1"
tokio-io = "0.1"
mio = "0.6"

[dev-dependencies]
slog = "1.4"
slog-term = "1.3"
slog-stdlog = "1.1"
slog-envlogger = "0.5"
net2 = "0.2"
